--- a/public/home.html
+++ b/public/home.html
@@ -66,7 +66,7 @@
                 <footer> Footer™ </footer>    
             </div>
         </div>
-        <script src="assets/js/excursions.js"> </script>
+        <script src="assets/js/events.js"> </script>
 
     </body>
 </html>
