events page formatted

--- a/public/venueinfo.html
+++ b/public/venueinfo.html
@@ -21,7 +21,7 @@
                 </nav>
                   
         <div class="jumbotron">
-            <div class="containter"> 
+            <div class="container"> 
                 <table class="table">
                     <thead>
                         <tr>
