--- a/public/home.html
+++ b/public/home.html
@@ -1,72 +1,84 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Project2 Skeleton</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        
 
-    </head>
-    <body>
-        <div class="row header">
-            <div class="col-md-3 offset-4">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="/">Header</a>
-                    </nav>
-                </div>
-            </div>
-        <div class="jumbotron">
-                <div class="containter"> 
-                    <div class="row carousel">
-                        <div class="col-md-3 offset-4">
-                            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                        <!--        <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img class="d-block w-100" src="..." alt="First slide">
-                                        </div>
-                                        <div class="carousel-item">
-                                        <img class="d-block w-100" src="..." alt="Second slide">
-                                        </div>
-                                        <div class="carousel-item">
-                                        <img class="d-block w-100" src="..." alt="Third slide">
-                                        </div>
-                                    </div> -->
-                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
+<head>
+    <meta charset="utf-8">
+    <title>Project2 Skeleton</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+
+</head>
+
+<body>
+    <div class="row header">
+        <div class="col-md-3 offset-4">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="/">Header</a>
+            </nav>
+        </div>
+    </div>
+    <div class="jumbotron">
+        <div class="containter">
+            <div class="row carousel">
+                <div class="col-md-3 offset-4">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="..." alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="..." alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="..." alt="Third slide">
                             </div>
                         </div>
-                    </div>
-                    <div class="rowSignin">
-                        <div class="col-md-3 offset-4">     
-                            <form>
-                                <label for="first">First Name:</label>
-                                <input type="text" class="form-control" id="first"><br>
-                                <label for="last">Last Name:</label>
-                                <input type="text" class="form-control" id="last"><br>
-                                <label for="email">Email:</label>
-                                <input type="email" class="form-control" id="email"><br>
-                                <input id="search" type="submit">   
-                            </form>   
-                            </div> 
-                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
             </div>
+            <div class="rowSignin">
+                <div class="col-md-3 offset-4">
+                    <form>
+                        <label for="first">First Name:</label>
+                        <input type="text" class="form-control" id="first"><br>
+                        <label for="last">Last Name:</label>
+                        <input type="text" class="form-control" id="last"><br>
+                        <label for="email">Email:</label>
+                        <input type="email" class="form-control" id="email"><br>
+                        <input id="search" type="submit">
+                    </form>
+                </div>
+            </div>
+            <div class="row" id="saved">
+                <div id="purchased">
+                    <div class="row" id="eventInfo">
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="row footer">
             <div class="col-md-3 offset-4">
-                <footer> Footer™ </footer>    
+                <footer> Footer™ </footer>
             </div>
         </div>
         <script src="assets/js/events.js"> </script>
 
-    </body>
+</body>
+
 </html>
