--- a/public/home.html
+++ b/public/home.html
@@ -10,6 +10,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <!-- Link to Moment.js -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
 
 </head>
@@ -23,7 +25,7 @@
         </div>
     </div>
     <div class="jumbotron">
-        <div class="containter">
+        <div class="container">
             <div class="row carousel">
                 <div class="col-md-3 offset-4">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -64,20 +66,19 @@
                     </form>
                 </div>
             </div>
-            <div class="row" id="saved">
-                <div id="purchased">
-                    <div class="row" id="eventInfo">
-                    </div>
+            <div class="row" id="saveEvent">
+                <div id="purchaseEvent">
+                    <div class="row" id="eventInfo"></div>
                 </div>
             </div>
         </div>
-
-        <div class="row footer">
-            <div class="col-md-3 offset-4">
-                <footer> Footer™ </footer>
-            </div>
+    </div>
+    <div class="row footer">
+        <div class="col-md-3 offset-4">
+            <footer> Footer™ </footer>
         </div>
-        <script src="assets/js/events.js"> </script>
+    </div>
+    <script src="assets/js/events.js"> </script>
 
 </body>
 
