--- a/public/home.html
+++ b/public/home.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="utf-8">
     <title>Project2 Skeleton</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/project2.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
     <!-- Link to Moment.js -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-
 
 </head>
 
@@ -31,13 +34,16 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="..." alt="First slide">
+                                <img class="d-block w-100 carousel-innerimg" src="assets/img/theatre.png"
+                                    alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="..." alt="Second slide">
+                                <img class="d-block w-100 carousel-innerimg" src="assets/img/theatre2.png"
+                                    alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="..." alt="Third slide">
+                                <img class="d-block w-100 carousel-innerimg" src="assets/img/theatre3.png"
+                                    alt="Third slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
