--- a/public/home.html
+++ b/public/home.html
@@ -13,7 +13,6 @@
         crossorigin="anonymous"></script>
     <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
-
     <!-- Link to Moment.js -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
@@ -29,7 +28,7 @@
     </div>
     <div class="jumbotron">
         <div class="container">
-            <div class="row carousel">
+            <div class="rowCarousel">
                 <div class="col-md-3 offset-4">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
@@ -85,6 +84,8 @@
         </div>
     </div>
     <script src="assets/js/events.js"> </script>
+    <script>$('#datepicker').datepicker({uiLibrary: 'bootstrap4'});</script>
+
 
 </body>
 
