--- a/public/home.html
+++ b/public/home.html
@@ -25,9 +25,9 @@
                 <table class="table">
                     <thead>
                         <tr>
-                        <th id="th1" scope="col">Event</th>
-                        <th id="th2" scope="col">Select Events</th>
-                        <th id="th3" scope="col">Saved Events</th>
+                        <th scope="col">Event</th>
+                        <th scope="col">Select Events</th>
+                        <th scope="col">Saved Events</th>
                         </tr>
                     </thead>
                  <tbody>
