--- a/public/venueinfo.html
+++ b/public/venueinfo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Project2 Skeleton</title>
-        <link rel="stylesheet" type="text/css" href="project2.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/project2.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -20,24 +20,23 @@
                     <a class="navbar-brand navbar" href="/"><h2>Events</h2></a>
                 </nav>
                   
-        <div class="jumbotron">
-            <div class="containter"> 
+        <div class="jumbotron" id="newpic">
+            <divr class="containter "> 
                 <table class="table">
                     <thead>
                         <tr>
                         <th scope="col">Event</th>
                         <th scope="col">Select Events</th>
                         <th scope="col">Saved Events</th>
-                    </tr>
-                </thead>
-                <tbody>
+                        </tr>
+                    </thead>
+                 <tbody>
                   <tr>
                     <td>
                         <div id="theatreValues">
                     </td>
                     <td>
                         <div id="theaterinfo">
-                        
                         </div>
                         <div class="form-group">
                                 <button class="btn btn-lg btn-primary" id="save">Save</button>
@@ -52,7 +51,7 @@
                                         <option value="5">5</option>
                                         <option value="6">6</option>
                                 </select>
-                                <input id="datepicker" width="276" placeholder="Select date">
+                                <input id="datepicker" type=date width="276" placeholder="Select date">
                             </div>
                     </td>
                     <td>
