--- a/public/home.html
+++ b/public/home.html
@@ -74,7 +74,7 @@
             </div>
         
 
-            <script src="assets/js/event.js"> </script><!--changed to events.js-->
+            <script src="assets/js/events.js"> </script><!--changed to events.js-->
             
 
     </body>
