--- a/public/venues.html
+++ b/public/venues.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
             <meta charset="utf-8">
-        <title>Project2 Skeleton</title>
+        <title>venues</title>
         <link rel="stylesheet" type="text/css" href="assets/css/project2.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -74,8 +74,12 @@
             </div>
         
 
-            <script src="assets/js/event.js"> </script><!--changed to events.js-->
-            
+            <script src="assets/js/events.js"> </script><!--changed to events.js-->
+            <script>
+                    $('#datepicker').datepicker({
+                        uiLibrary: 'bootstrap4'
+                    });
+            </script>
 
     </body>
 </html>
