--- a/public/home.html
+++ b/public/home.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="jumbotron">
-        <div class="container">
+        <div class="container-fluid">
             <div class="rowCarousel">
                 <div class="col-md-3 offset-4">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
