change row carousel div name

--- a/public/home.html
+++ b/public/home.html
@@ -32,7 +32,7 @@
         <div class="containter">
             <img id="curtain" src="assets/img/curtain.png">
 
-            <div class="row carousel">
+            <div class="rowCarousel">
                 <div class="col-md-12">
                     <!--made the col widder-->
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
