--- a/public/home.html
+++ b/public/home.html
@@ -28,7 +28,7 @@
                 <div class="containter"> 
                     <img id="curtain" src="assets/img/curtain.png">
                     
-                    <div class="row carousel">
+                    <div class="rowCarousel">
                         <div class="col-md-12"> <!--made the col widder-->
                             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
@@ -63,16 +63,14 @@
                                     <div class="input-group-text">@</div><!--added thing-->
                                     <input type="email" class="form-control" id="email" placeholder="Email"><!--took away label, used placeholder-->
                                 </div>
+                                <input id="search" type="submit" class="btn btn-lg btn-primary">
                             </form>   
                         </div>
-
-                                            <div class="row" id="eventInfo"></div>
-                                            <div id="save"></div>
-                                            <div id="purchase"></div>
-
-
+                        <div class="row" id="saveEvent">
+                                <div id="purchaseEvent">
+                                    <div class="row" id="eventInfo"></div>
                         <div class="col-md-2 offset-2">     
-                            <input id="search" type="submit" class="btn btn-lg btn-primary">
+                            
                         </div>
                     </div>
                 </div>
