--- a/public/home.html
+++ b/public/home.html
@@ -29,7 +29,7 @@
         <!--removed row stuff so it would flow better-->
     </nav>
     <div class="jumbotron">
-        <div class="containter">
+        <div class="containter" id="merryGoRound">
             <img id="curtain" src="assets/img/curtain.png">
 
             <div class="row carousel">
@@ -82,17 +82,18 @@
                             <!--took away label, used placeholder-->
                         </div>
                         <div class="col-md-2 offset-2">
-                            <input id="search" type="submit" class="btn btn-lg btn-primary">
+                            <input id="search" type="submit" class="btn btn-lg btn-primary"
+                                data-anijs="if: click, do: fadeOut animated, to: .rowSignin">
                         </div>
                     </form>
                 </div>
-                <div class="row" id="eventInfo"></div>
-                <div id="save"></div>
-                <div id="purchase"></div>
             </div>
+            <div class="row" id="eventInfo"></div>
+            <div id="save"></div>
+            <div id="purchase"></div>
         </div>
 
-        <div class="footer">London Theaters Plus™ 2019</div>
+        <!-- <div class="footer">London Theaters Plus™ 2019</div> -->
         <!--removed row stuff so it would flow better-->
     </div>
     <script src="assets/js/events.js"> </script>
