fixed save button

--- a/public/home.html
+++ b/public/home.html
@@ -86,15 +86,15 @@
                         </div>
                     </form>
                 </div>
-                <div class="row" id="eventInfo"></div>
-                <div id="save"></div>
-                <div id="purchase"></div>
             </div>
-        </div>
+            <div class="row" id="eventInfo"></div>
 
-        <div class="footer">London Theaters Plus™ 2019</div>
-        <!--removed row stuff so it would flow better-->
+        </div>
     </div>
+
+    <!--      <div class="footer">London Theaters Plus™ 2019</div>-->
+    <!--removed row stuff so it would flow better-->
+
     <script src="assets/js/events.js"> </script>
     <script>$('#datepicker').datepicker({ uiLibrary: 'bootstrap4' });</script>
     <script src="assets/js/anijs-min.js"> </script>
