--- a/public/home.html
+++ b/public/home.html
@@ -88,13 +88,11 @@
                     </form>
                 </div>
             </div>
-            <div class="row" id="eventInfo"></div>
         </div>
-        <!-- <div class="footer">London Theaters Plus™ 2019</div> -->
-        <!--removed row stuff so it would flow better-->
-
+        <div class="row" id="eventInfo"></div>
+        <div id="saveEvent"></div>
+        <div id="purchaseEvent"></div>
     </div>
-
     <!--      <div class="footer">London Theaters Plus™ 2019</div>-->
     <!--removed row stuff so it would flow better-->
 
