--- a/public/venueinfo.html
+++ b/public/venueinfo.html
@@ -17,7 +17,7 @@
     <body>
             
             <nav class="navbar">
-                    <a class="navbar-brand navbar" href="/"><h2>London Theaters Plus</h2></a>
+                    <h1>London Theaters Plus</h1>
                 </nav>
                   
 
