--- a/public/venueinfo.html
+++ b/public/venueinfo.html
@@ -17,7 +17,10 @@
     <body>
             
             <nav class="navbar">
-                    <h1>London Theaters Plus</h1>
+                    <a class="navbar-brand navbar" href="/">
+                        <h1 id="header">London Theaters Plus</h1>
+                    </a>
+                    <!--removed row stuff so it would flow better-->
                 </nav>
                   
 
