--- a/public/home.html
+++ b/public/home.html
@@ -91,8 +91,8 @@
         <div id="saveEvent"></div>
         <div id="purchaseEent"></div>
     </div>
-    
-    <div class="footer">London Theaters Plus™ 2019</div>
+<!--     
+    <div class="footer">London Theaters Plus™ 2019</div> -->
 
     <script src="assets/js/events.js"> </script>
     <script>$('#datepicker').datepicker({ uiLibrary: 'bootstrap4' });</script>
